--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "axios": "^0.27.2",
     "bootstrap": "^5.2.0",
     "dotenv": "^16.0.1",
+    "fetch": "^1.1.0",
     "firebase": "^9.9.3",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
