--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "fetch": "^1.1.0",
     "firebase": "^9.9.3",
     "framer-motion": "^7.2.1",
+    "party-js": "^2.2.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
     "react-calendar": "^3.7.0",
